<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        android:background="@null"
        app:hintTextAppearance="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_animation_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_cognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/Widget.Design.TextInputLayout">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_cognome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_animation_cognme" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_animation_nick" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintTextAppearance="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/edit_text_animation_data" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>