<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_view_header_height"
    android:background="@drawable/navigation_view_header_background"
    android:paddingBottom="10dp"
    android:paddingTop="40dp">

    <TextView
        android:id="@+id/text_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/main_activity_navigationview_description_text_shadow_color"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/main_activity_navigationview_android"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/main_activity_navigationview_description_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_one"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:shadowColor="@color/main_activity_navigationview_description_text_shadow_color"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/main_activity_navigationview_material_design"
        android:textColor="@color/main_activity_navigationview_description_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:shadowColor="@color/main_activity_navigationview_description_text_shadow_color"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/main_activity_navigationview_description_text"
        android:textColor="@color/main_activity_navigationview_description_text"
        android:textSize="18sp" />
</RelativeLayout>